parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> print
Rule 6     statement -> if
Rule 7     statement -> while
Rule 8     statement -> break
Rule 9     statement -> for
Rule 10    statement -> fn
Rule 11    statement -> ret
Rule 12    statement -> invoke
Rule 13    statement -> class
Rule 14    statement -> visit
Rule 15    visit -> VARIABLE . VARIABLE
Rule 16    class -> CLASS VARIABLE { statements }
Rule 17    if -> IF ( condition ) { statements } elseif
Rule 18    elseif -> ELIF ( condition ) { statements } elseif
Rule 19    elseif -> else
Rule 20    else -> ELSE { statements }
Rule 21    else -> empty
Rule 22    while -> WHILE ( conditions ) { statements }
Rule 23    for -> FOR ( assignment ; conditions ; assignment ) { statements }
Rule 24    conditions -> condition
Rule 25    conditions -> condition AND condition
Rule 26    condition -> variable LEQ variable
Rule 27    condition -> variable < variable
Rule 28    condition -> variable > variable
Rule 29    condition -> variable GEQ variable
Rule 30    condition -> variable EQ variable
Rule 31    condition -> variable NEQ variable
Rule 32    break -> BREAK
Rule 33    expr -> expr + term
Rule 34    expr -> expr - term
Rule 35    expr -> term
Rule 36    term -> term * factor
Rule 37    term -> term / factor
Rule 38    term -> term IDIV factor
Rule 39    term -> factor
Rule 40    factor -> variable
Rule 41    factor -> ( expr )
Rule 42    ret -> RETURN VARIABLE
Rule 43    ret -> RETURN
Rule 44    variable -> VARIABLE [ variable ]
Rule 45    variable -> VARIABLE
Rule 46    variable -> NUMBER
Rule 47    variable -> STR
Rule 48    variable -> visit
Rule 49    assignment -> variable = expr
Rule 50    assignment -> variable = [ agg ]
Rule 51    assignment -> variable = LEN ( VARIABLE )
Rule 52    assignment -> variable = VARIABLE [ VARIABLE ]
Rule 53    assignment -> variable = VARIABLE ( agg )
Rule 54    agg -> VARIABLE agg
Rule 55    agg -> STR agg
Rule 56    agg -> NUMBER agg
Rule 57    agg -> , agg
Rule 58    agg -> VARIABLE
Rule 59    agg -> NUMBER
Rule 60    agg -> STR
Rule 61    agg -> empty
Rule 62    print -> PRINT ( agg )
Rule 63    fn -> DEF VARIABLE ( agg ) { statements }
Rule 64    invoke -> VARIABLE ( agg )
Rule 65    invoke -> VARIABLE . VARIABLE ( agg )
Rule 66    empty -> <empty>

Terminals, with rules where they appear

(                    : 17 18 22 23 41 51 53 62 63 64 65
)                    : 17 18 22 23 41 51 53 62 63 64 65
*                    : 36
+                    : 33
,                    : 57
-                    : 34
.                    : 15 65
/                    : 37
;                    : 23 23
<                    : 27
=                    : 49 50 51 52 53
>                    : 28
AND                  : 25
BREAK                : 32
CLASS                : 16
DEF                  : 63
ELIF                 : 18
ELSE                 : 20
EQ                   : 30
FOR                  : 23
GEQ                  : 29
IDIV                 : 38
IF                   : 17
LEN                  : 51
LEQ                  : 26
NEQ                  : 31
NUMBER               : 46 56 59
PRINT                : 62
RETURN               : 42 43
STR                  : 47 55 60
VARIABLE             : 15 15 16 42 44 45 51 52 52 53 54 58 63 64 65 65
WHILE                : 22
[                    : 44 50 52
]                    : 44 50 52
error                : 
{                    : 16 17 18 20 22 23 63
}                    : 16 17 18 20 22 23 63

Nonterminals, with rules where they appear

agg                  : 50 53 54 55 56 57 62 63 64 65
assignment           : 4 23 23
break                : 8
class                : 13
condition            : 17 18 24 25 25
conditions           : 22 23
else                 : 19
elseif               : 17 18
empty                : 21 61
expr                 : 33 34 41 49
factor               : 36 37 38 39
fn                   : 10
for                  : 9
if                   : 6
invoke               : 12
print                : 5
program              : 0
ret                  : 11
statement            : 2 3
statements           : 1 2 16 17 18 20 22 23 63
term                 : 33 34 35 36 37 38
variable             : 26 26 27 27 28 28 29 29 30 30 31 31 40 44 49 50 51 52 53
visit                : 14 48
while                : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . print
    (6) statement -> . if
    (7) statement -> . while
    (8) statement -> . break
    (9) statement -> . for
    (10) statement -> . fn
    (11) statement -> . ret
    (12) statement -> . invoke
    (13) statement -> . class
    (14) statement -> . visit
    (49) assignment -> . variable = expr
    (50) assignment -> . variable = [ agg ]
    (51) assignment -> . variable = LEN ( VARIABLE )
    (52) assignment -> . variable = VARIABLE [ VARIABLE ]
    (53) assignment -> . variable = VARIABLE ( agg )
    (62) print -> . PRINT ( agg )
    (17) if -> . IF ( condition ) { statements } elseif
    (22) while -> . WHILE ( conditions ) { statements }
    (32) break -> . BREAK
    (23) for -> . FOR ( assignment ; conditions ; assignment ) { statements }
    (63) fn -> . DEF VARIABLE ( agg ) { statements }
    (42) ret -> . RETURN VARIABLE
    (43) ret -> . RETURN
    (64) invoke -> . VARIABLE ( agg )
    (65) invoke -> . VARIABLE . VARIABLE ( agg )
    (16) class -> . CLASS VARIABLE { statements }
    (15) visit -> . VARIABLE . VARIABLE
    (44) variable -> . VARIABLE [ variable ]
    (45) variable -> . VARIABLE
    (46) variable -> . NUMBER
    (47) variable -> . STR
    (48) variable -> . visit

    PRINT           shift and go to state 5
    IF              shift and go to state 24
    WHILE           shift and go to state 4
    BREAK           shift and go to state 25
    FOR             shift and go to state 9
    DEF             shift and go to state 7
    RETURN          shift and go to state 6
    VARIABLE        shift and go to state 3
    CLASS           shift and go to state 16
    NUMBER          shift and go to state 2
    STR             shift and go to state 20

    statements                     shift and go to state 1
    invoke                         shift and go to state 17
    for                            shift and go to state 10
    assignment                     shift and go to state 18
    visit                          shift and go to state 11
    ret                            shift and go to state 12
    break                          shift and go to state 19
    variable                       shift and go to state 21
    while                          shift and go to state 26
    program                        shift and go to state 13
    statement                      shift and go to state 14
    print                          shift and go to state 15
    class                          shift and go to state 22
    fn                             shift and go to state 23
    if                             shift and go to state 8

state 1

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . print
    (6) statement -> . if
    (7) statement -> . while
    (8) statement -> . break
    (9) statement -> . for
    (10) statement -> . fn
    (11) statement -> . ret
    (12) statement -> . invoke
    (13) statement -> . class
    (14) statement -> . visit
    (49) assignment -> . variable = expr
    (50) assignment -> . variable = [ agg ]
    (51) assignment -> . variable = LEN ( VARIABLE )
    (52) assignment -> . variable = VARIABLE [ VARIABLE ]
    (53) assignment -> . variable = VARIABLE ( agg )
    (62) print -> . PRINT ( agg )
    (17) if -> . IF ( condition ) { statements } elseif
    (22) while -> . WHILE ( conditions ) { statements }
    (32) break -> . BREAK
    (23) for -> . FOR ( assignment ; conditions ; assignment ) { statements }
    (63) fn -> . DEF VARIABLE ( agg ) { statements }
    (42) ret -> . RETURN VARIABLE
    (43) ret -> . RETURN
    (64) invoke -> . VARIABLE ( agg )
    (65) invoke -> . VARIABLE . VARIABLE ( agg )
    (16) class -> . CLASS VARIABLE { statements }
    (15) visit -> . VARIABLE . VARIABLE
    (44) variable -> . VARIABLE [ variable ]
    (45) variable -> . VARIABLE
    (46) variable -> . NUMBER
    (47) variable -> . STR
    (48) variable -> . visit

    $end            reduce using rule 1 (program -> statements .)
    PRINT           shift and go to state 5
    IF              shift and go to state 24
    WHILE           shift and go to state 4
    BREAK           shift and go to state 25
    FOR             shift and go to state 9
    DEF             shift and go to state 7
    RETURN          shift and go to state 6
    VARIABLE        shift and go to state 3
    CLASS           shift and go to state 16
    NUMBER          shift and go to state 2
    STR             shift and go to state 20

    invoke                         shift and go to state 17
    for                            shift and go to state 10
    assignment                     shift and go to state 18
    visit                          shift and go to state 11
    ret                            shift and go to state 12
    break                          shift and go to state 19
    variable                       shift and go to state 21
    while                          shift and go to state 26
    statement                      shift and go to state 27
    print                          shift and go to state 15
    class                          shift and go to state 22
    fn                             shift and go to state 23
    if                             shift and go to state 8

state 2

    (46) variable -> NUMBER .

    =               reduce using rule 46 (variable -> NUMBER .)
    AND             reduce using rule 46 (variable -> NUMBER .)
    )               reduce using rule 46 (variable -> NUMBER .)
    ;               reduce using rule 46 (variable -> NUMBER .)
    LEQ             reduce using rule 46 (variable -> NUMBER .)
    <               reduce using rule 46 (variable -> NUMBER .)
    >               reduce using rule 46 (variable -> NUMBER .)
    GEQ             reduce using rule 46 (variable -> NUMBER .)
    EQ              reduce using rule 46 (variable -> NUMBER .)
    NEQ             reduce using rule 46 (variable -> NUMBER .)
    *               reduce using rule 46 (variable -> NUMBER .)
    /               reduce using rule 46 (variable -> NUMBER .)
    IDIV            reduce using rule 46 (variable -> NUMBER .)
    +               reduce using rule 46 (variable -> NUMBER .)
    -               reduce using rule 46 (variable -> NUMBER .)
    PRINT           reduce using rule 46 (variable -> NUMBER .)
    IF              reduce using rule 46 (variable -> NUMBER .)
    WHILE           reduce using rule 46 (variable -> NUMBER .)
    BREAK           reduce using rule 46 (variable -> NUMBER .)
    FOR             reduce using rule 46 (variable -> NUMBER .)
    DEF             reduce using rule 46 (variable -> NUMBER .)
    RETURN          reduce using rule 46 (variable -> NUMBER .)
    VARIABLE        reduce using rule 46 (variable -> NUMBER .)
    CLASS           reduce using rule 46 (variable -> NUMBER .)
    NUMBER          reduce using rule 46 (variable -> NUMBER .)
    STR             reduce using rule 46 (variable -> NUMBER .)
    $end            reduce using rule 46 (variable -> NUMBER .)
    }               reduce using rule 46 (variable -> NUMBER .)
    ]               reduce using rule 46 (variable -> NUMBER .)


state 3

    (64) invoke -> VARIABLE . ( agg )
    (65) invoke -> VARIABLE . . VARIABLE ( agg )
    (15) visit -> VARIABLE . . VARIABLE
    (44) variable -> VARIABLE . [ variable ]
    (45) variable -> VARIABLE .

    (               shift and go to state 28
    .               shift and go to state 29
    [               shift and go to state 30
    =               reduce using rule 45 (variable -> VARIABLE .)


state 4

    (22) while -> WHILE . ( conditions ) { statements }

    (               shift and go to state 31


state 5

    (62) print -> PRINT . ( agg )

    (               shift and go to state 32


state 6

    (42) ret -> RETURN . VARIABLE
    (43) ret -> RETURN .

  ! shift/reduce conflict for VARIABLE resolved as shift
    VARIABLE        shift and go to state 33
    }               reduce using rule 43 (ret -> RETURN .)
    PRINT           reduce using rule 43 (ret -> RETURN .)
    IF              reduce using rule 43 (ret -> RETURN .)
    WHILE           reduce using rule 43 (ret -> RETURN .)
    BREAK           reduce using rule 43 (ret -> RETURN .)
    FOR             reduce using rule 43 (ret -> RETURN .)
    DEF             reduce using rule 43 (ret -> RETURN .)
    RETURN          reduce using rule 43 (ret -> RETURN .)
    CLASS           reduce using rule 43 (ret -> RETURN .)
    NUMBER          reduce using rule 43 (ret -> RETURN .)
    STR             reduce using rule 43 (ret -> RETURN .)
    $end            reduce using rule 43 (ret -> RETURN .)

  ! VARIABLE        [ reduce using rule 43 (ret -> RETURN .) ]


state 7

    (63) fn -> DEF . VARIABLE ( agg ) { statements }

    VARIABLE        shift and go to state 34


state 8

    (6) statement -> if .

    }               reduce using rule 6 (statement -> if .)
    PRINT           reduce using rule 6 (statement -> if .)
    IF              reduce using rule 6 (statement -> if .)
    WHILE           reduce using rule 6 (statement -> if .)
    BREAK           reduce using rule 6 (statement -> if .)
    FOR             reduce using rule 6 (statement -> if .)
    DEF             reduce using rule 6 (statement -> if .)
    RETURN          reduce using rule 6 (statement -> if .)
    VARIABLE        reduce using rule 6 (statement -> if .)
    CLASS           reduce using rule 6 (statement -> if .)
    NUMBER          reduce using rule 6 (statement -> if .)
    STR             reduce using rule 6 (statement -> if .)
    $end            reduce using rule 6 (statement -> if .)


state 9

    (23) for -> FOR . ( assignment ; conditions ; assignment ) { statements }

    (               shift and go to state 35


state 10

    (9) statement -> for .

    }               reduce using rule 9 (statement -> for .)
    PRINT           reduce using rule 9 (statement -> for .)
    IF              reduce using rule 9 (statement -> for .)
    WHILE           reduce using rule 9 (statement -> for .)
    BREAK           reduce using rule 9 (statement -> for .)
    FOR             reduce using rule 9 (statement -> for .)
    DEF             reduce using rule 9 (statement -> for .)
    RETURN          reduce using rule 9 (statement -> for .)
    VARIABLE        reduce using rule 9 (statement -> for .)
    CLASS           reduce using rule 9 (statement -> for .)
    NUMBER          reduce using rule 9 (statement -> for .)
    STR             reduce using rule 9 (statement -> for .)
    $end            reduce using rule 9 (statement -> for .)


state 11

    (14) statement -> visit .
    (48) variable -> visit .

    }               reduce using rule 14 (statement -> visit .)
    PRINT           reduce using rule 14 (statement -> visit .)
    IF              reduce using rule 14 (statement -> visit .)
    WHILE           reduce using rule 14 (statement -> visit .)
    BREAK           reduce using rule 14 (statement -> visit .)
    FOR             reduce using rule 14 (statement -> visit .)
    DEF             reduce using rule 14 (statement -> visit .)
    RETURN          reduce using rule 14 (statement -> visit .)
    VARIABLE        reduce using rule 14 (statement -> visit .)
    CLASS           reduce using rule 14 (statement -> visit .)
    NUMBER          reduce using rule 14 (statement -> visit .)
    STR             reduce using rule 14 (statement -> visit .)
    $end            reduce using rule 14 (statement -> visit .)
    =               reduce using rule 48 (variable -> visit .)


state 12

    (11) statement -> ret .

    }               reduce using rule 11 (statement -> ret .)
    PRINT           reduce using rule 11 (statement -> ret .)
    IF              reduce using rule 11 (statement -> ret .)
    WHILE           reduce using rule 11 (statement -> ret .)
    BREAK           reduce using rule 11 (statement -> ret .)
    FOR             reduce using rule 11 (statement -> ret .)
    DEF             reduce using rule 11 (statement -> ret .)
    RETURN          reduce using rule 11 (statement -> ret .)
    VARIABLE        reduce using rule 11 (statement -> ret .)
    CLASS           reduce using rule 11 (statement -> ret .)
    NUMBER          reduce using rule 11 (statement -> ret .)
    STR             reduce using rule 11 (statement -> ret .)
    $end            reduce using rule 11 (statement -> ret .)


state 13

    (0) S' -> program .



state 14

    (3) statements -> statement .

    }               reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    VARIABLE        reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STR             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 15

    (5) statement -> print .

    }               reduce using rule 5 (statement -> print .)
    PRINT           reduce using rule 5 (statement -> print .)
    IF              reduce using rule 5 (statement -> print .)
    WHILE           reduce using rule 5 (statement -> print .)
    BREAK           reduce using rule 5 (statement -> print .)
    FOR             reduce using rule 5 (statement -> print .)
    DEF             reduce using rule 5 (statement -> print .)
    RETURN          reduce using rule 5 (statement -> print .)
    VARIABLE        reduce using rule 5 (statement -> print .)
    CLASS           reduce using rule 5 (statement -> print .)
    NUMBER          reduce using rule 5 (statement -> print .)
    STR             reduce using rule 5 (statement -> print .)
    $end            reduce using rule 5 (statement -> print .)


state 16

    (16) class -> CLASS . VARIABLE { statements }

    VARIABLE        shift and go to state 36


state 17

    (12) statement -> invoke .

    }               reduce using rule 12 (statement -> invoke .)
    PRINT           reduce using rule 12 (statement -> invoke .)
    IF              reduce using rule 12 (statement -> invoke .)
    WHILE           reduce using rule 12 (statement -> invoke .)
    BREAK           reduce using rule 12 (statement -> invoke .)
    FOR             reduce using rule 12 (statement -> invoke .)
    DEF             reduce using rule 12 (statement -> invoke .)
    RETURN          reduce using rule 12 (statement -> invoke .)
    VARIABLE        reduce using rule 12 (statement -> invoke .)
    CLASS           reduce using rule 12 (statement -> invoke .)
    NUMBER          reduce using rule 12 (statement -> invoke .)
    STR             reduce using rule 12 (statement -> invoke .)
    $end            reduce using rule 12 (statement -> invoke .)


state 18

    (4) statement -> assignment .

    }               reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    VARIABLE        reduce using rule 4 (statement -> assignment .)
    CLASS           reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    STR             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)


state 19

    (8) statement -> break .

    }               reduce using rule 8 (statement -> break .)
    PRINT           reduce using rule 8 (statement -> break .)
    IF              reduce using rule 8 (statement -> break .)
    WHILE           reduce using rule 8 (statement -> break .)
    BREAK           reduce using rule 8 (statement -> break .)
    FOR             reduce using rule 8 (statement -> break .)
    DEF             reduce using rule 8 (statement -> break .)
    RETURN          reduce using rule 8 (statement -> break .)
    VARIABLE        reduce using rule 8 (statement -> break .)
    CLASS           reduce using rule 8 (statement -> break .)
    NUMBER          reduce using rule 8 (statement -> break .)
    STR             reduce using rule 8 (statement -> break .)
    $end            reduce using rule 8 (statement -> break .)


state 20

    (47) variable -> STR .

    =               reduce using rule 47 (variable -> STR .)
    AND             reduce using rule 47 (variable -> STR .)
    )               reduce using rule 47 (variable -> STR .)
    ;               reduce using rule 47 (variable -> STR .)
    LEQ             reduce using rule 47 (variable -> STR .)
    <               reduce using rule 47 (variable -> STR .)
    >               reduce using rule 47 (variable -> STR .)
    GEQ             reduce using rule 47 (variable -> STR .)
    EQ              reduce using rule 47 (variable -> STR .)
    NEQ             reduce using rule 47 (variable -> STR .)
    *               reduce using rule 47 (variable -> STR .)
    /               reduce using rule 47 (variable -> STR .)
    IDIV            reduce using rule 47 (variable -> STR .)
    +               reduce using rule 47 (variable -> STR .)
    -               reduce using rule 47 (variable -> STR .)
    PRINT           reduce using rule 47 (variable -> STR .)
    IF              reduce using rule 47 (variable -> STR .)
    WHILE           reduce using rule 47 (variable -> STR .)
    BREAK           reduce using rule 47 (variable -> STR .)
    FOR             reduce using rule 47 (variable -> STR .)
    DEF             reduce using rule 47 (variable -> STR .)
    RETURN          reduce using rule 47 (variable -> STR .)
    VARIABLE        reduce using rule 47 (variable -> STR .)
    CLASS           reduce using rule 47 (variable -> STR .)
    NUMBER          reduce using rule 47 (variable -> STR .)
    STR             reduce using rule 47 (variable -> STR .)
    $end            reduce using rule 47 (variable -> STR .)
    }               reduce using rule 47 (variable -> STR .)
    ]               reduce using rule 47 (variable -> STR .)


state 21

    (49) assignment -> variable . = expr
    (50) assignment -> variable . = [ agg ]
    (51) assignment -> variable . = LEN ( VARIABLE )
    (52) assignment -> variable . = VARIABLE [ VARIABLE ]
    (53) assignment -> variable . = VARIABLE ( agg )

    =               shift and go to state 37


state 22

    (13) statement -> class .

    }               reduce using rule 13 (statement -> class .)
    PRINT           reduce using rule 13 (statement -> class .)
    IF              reduce using rule 13 (statement -> class .)
    WHILE           reduce using rule 13 (statement -> class .)
    BREAK           reduce using rule 13 (statement -> class .)
    FOR             reduce using rule 13 (statement -> class .)
    DEF             reduce using rule 13 (statement -> class .)
    RETURN          reduce using rule 13 (statement -> class .)
    VARIABLE        reduce using rule 13 (statement -> class .)
    CLASS           reduce using rule 13 (statement -> class .)
    NUMBER          reduce using rule 13 (statement -> class .)
    STR             reduce using rule 13 (statement -> class .)
    $end            reduce using rule 13 (statement -> class .)


state 23

    (10) statement -> fn .

    }               reduce using rule 10 (statement -> fn .)
    PRINT           reduce using rule 10 (statement -> fn .)
    IF              reduce using rule 10 (statement -> fn .)
    WHILE           reduce using rule 10 (statement -> fn .)
    BREAK           reduce using rule 10 (statement -> fn .)
    FOR             reduce using rule 10 (statement -> fn .)
    DEF             reduce using rule 10 (statement -> fn .)
    RETURN          reduce using rule 10 (statement -> fn .)
    VARIABLE        reduce using rule 10 (statement -> fn .)
    CLASS           reduce using rule 10 (statement -> fn .)
    NUMBER          reduce using rule 10 (statement -> fn .)
    STR             reduce using rule 10 (statement -> fn .)
    $end            reduce using rule 10 (statement -> fn .)


state 24

    (17) if -> IF . ( condition ) { statements } elseif

    (               shift and go to state 38


state 25

    (32) break -> BREAK .

    }               reduce using rule 32 (break -> BREAK .)
    PRINT           reduce using rule 32 (break -> BREAK .)
    IF              reduce using rule 32 (break -> BREAK .)
    WHILE           reduce using rule 32 (break -> BREAK .)
    BREAK           reduce using rule 32 (break -> BREAK .)
    FOR             reduce using rule 32 (break -> BREAK .)
    DEF             reduce using rule 32 (break -> BREAK .)
    RETURN          reduce using rule 32 (break -> BREAK .)
    VARIABLE        reduce using rule 32 (break -> BREAK .)
    CLASS           reduce using rule 32 (break -> BREAK .)
    NUMBER          reduce using rule 32 (break -> BREAK .)
    STR             reduce using rule 32 (break -> BREAK .)
    $end            reduce using rule 32 (break -> BREAK .)


state 26

    (7) statement -> while .

    }               reduce using rule 7 (statement -> while .)
    PRINT           reduce using rule 7 (statement -> while .)
    IF              reduce using rule 7 (statement -> while .)
    WHILE           reduce using rule 7 (statement -> while .)
    BREAK           reduce using rule 7 (statement -> while .)
    FOR             reduce using rule 7 (statement -> while .)
    DEF             reduce using rule 7 (statement -> while .)
    RETURN          reduce using rule 7 (statement -> while .)
    VARIABLE        reduce using rule 7 (statement -> while .)
    CLASS           reduce using rule 7 (statement -> while .)
    NUMBER          reduce using rule 7 (statement -> while .)
    STR             reduce using rule 7 (statement -> while .)
    $end            reduce using rule 7 (statement -> while .)


state 27

    (2) statements -> statements statement .

    }               reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    BREAK           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    VARIABLE        reduce using rule 2 (statements -> statements statement .)
    CLASS           reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    STR             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 28

    (64) invoke -> VARIABLE ( . agg )
    (54) agg -> . VARIABLE agg
    (55) agg -> . STR agg
    (56) agg -> . NUMBER agg
    (57) agg -> . , agg
    (58) agg -> . VARIABLE
    (59) agg -> . NUMBER
    (60) agg -> . STR
    (61) agg -> . empty
    (66) empty -> .

    VARIABLE        shift and go to state 43
    STR             shift and go to state 42
    NUMBER          shift and go to state 39
    ,               shift and go to state 40
    )               reduce using rule 66 (empty -> .)

    agg                            shift and go to state 41
